--- a/Aman.html
+++ b/Aman.html
@@ -9,7 +9,18 @@
 </head>
 
 <body>
-<button><a href="index.html">Home</a></button>
+<button><a href="index.html">Home</a>
+</button>
+<button class="big-red-button" onclick="inform()">Welcome</button>
+<div id="x1"></div>
+<div id="x2"></div>
+<div id="x3"></div>
+<div id="x4"></div>
+<script type="text/javascript">
+	function inform() {
+		alert("How is our website")
+	}
+</script>
 </body>
 
 </html>
